# wsc2017_tp17_server_side

./: .env  Cargo.toml
migrations/: 20240516065950_create_places_table.sql  20240516070101_create_schedules_table.sql  20240516080507_dump_data_for_table_places.sql  20240516080521_dump_data_for_table_schedules.sql  20240517021811_create_users_table.sql  20240521084249_dump_data_for_table_users.sql  20240522105138_create_sessions_table.sql
src/: config.rs  database.rs  main.rs  types.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs
src/routes/auth/login/: mod.rs
src/routes/auth/logout/: mod.rs
src/routes/place/: get.rs  mod.rs
src/routes/place/slug/: delete.rs  get.rs  mod.rs
src/routes/route/: mod.rs
src/routes/route/search/: graph.rs  mod.rs
tests/: auth.rs  login.rs  place.rs
