[package]
name = "wsc2017_tp17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
